# raikou

./: .eslintignore  .eslintrc  .gitattributes  .gitignore  .npmrc  .prettierrc.mjs  .syncpackrc.cjs  CONTRIBUTING.md  README.md  build.sh  buildAll.sh  buildClient.sh  buildOthers.sh  buildServer.sh  jest.config.js  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.eslint.json  tsconfig.json  turbo.json  updategit.sh  vite.config.mjs  vitest.setup.mjs
.VSCodeCounter/2023-10-16_09-47-03/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.changeset/: config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_report.yml
.github/workflows/: release.yml
@types/: extensions.d.ts  pigment-css.d.ts
apps/docs/: .eslintrc.js  CHANGELOG.md  package.json  postcss.config.js  tailwind.config.js  uno.config.js  vite.config.ts
apps/docs_nextjs/: next.config.mjs  package-lock.json  package.json
apps/docs_vite/: package.json
apps/electron/: .eslintrc.cjs  electron.vite.config.ts  package.json  tsconfig.node.json
apps/router/: package.json  tsconfig.json  vite.config.ts
apps/rrv7/: package.json  vite.config.ts
apps/start/: app.config.ts  package.json  updategit.sh
apps/web/: global.css  next.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  unocss.config.ts
apps/webbuild/: next.config.js  package.json  raikou_theme.ts  unocss.config.ts
rust/_deprecated/unocss-purge/: Cargo.toml
scripts/: build.ts  changelog.ts  clean-package.ts  generate-css.ts
(+115 files in other folders)
