[package]
name = "unocss-purge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.50", features = ["visitor", "into_owned"] } 
regex = "1.5.4"
walkdir = "2.3.2"
